# image-reviewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/image-reviewer/: SKILL.md
.github/workflows/: ci.yml  claude.yml  enforce-exclusive-labels.yml  issue-labeler.yml
src/image_reviewer/: __init__.py  __main__.py  cli.py  image_io.py  output.py  server.py  viewer.py
src/image_reviewer/assets/: app.html  fabric.min.js
tests/: conftest.py  test_cli.py  test_image_io.py  test_server.py  test_ui.py
